# logcat-gui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json
src/: main.cpp  renderer.cpp  renderer.h  renderer_util.h  signal_handler.cpp  signal_handler.h
